Stylesheet/emote/tag updates 2016-04-11

--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -159,7 +159,7 @@ z-index: 999999 !important;
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px;font-size:1em;margin:0;font-weight:100}
 .content .md h1:before{content:">"}
 
-.content h3 {font-size: 30pt; font-weight: bolder; color: red;}
+.content h3 {font-size: 6pt; font-weight: lighter; color: black}
 h3.imgTitle{font-size: 13px; padding: 2px; color: #000;}
 
 .RESDialogSmall.livePreview > h3 {font-weight: 100; font-size: 1em; color: black}
@@ -172,9 +172,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Pony Deprived Ploungers"}
+div.titlebox .subscribers span.number:after {content:" Washing their hooves"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Stalking the new queue for their fix" }
+div.titlebox p.users-online span.number:after { content: " Have sparkling clean hooves" }
 div.titlebox p.users-online span.word { display: none }
 
 /*Flair modifications*/
@@ -229,9 +229,9 @@ submitted
  padding-bottom: 220px;
  clear:both;
  text-align:center;
- height:500px;
+ height:441px;
  width:100%;
- background-image:url(%%sbfooter%%);
+ background-image:url(%%footer%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: center bottom;
@@ -495,15 +495,15 @@ a[href|="/rf09"],a[href|="/rflutterkay"],a[href|="/rf19"],a[href|="/rnotangry"],
 {-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1);}
 
 /*pl table*/
-a[href|="/pl00"],a[href|="/fillyrarity"],a[href|="/pl10"],a[href|="/twidur"],a[href|="/pl20"],a[href|="/amzingmagic"],
+a[href|="/pl00"],a[href|="/fillyrarity"],a[href|="/pl10"],a[href|="/twidur"],a[href|="/twidurr"],a[href|="/pl20"],a[href|="/amzingmagic"],a[href|="/amazingmagic"],
 a[href|="/pl01"],a[href|="/karmasalute"],a[href|="/pl11"],a[href|="/dishappy"],a[href|="/pl21"],a[href|="/karmastare"],
 a[href|="/pl02"],a[href|="/ohnoes"],
-a[href|="/rpl00"],a[href|="/rfillyrarity"],a[href|="/rpl10"],a[href|="/rtwidur"],a[href|="/rpl20"],a[href|="/ramzingmagic"],
+a[href|="/rpl00"],a[href|="/rfillyrarity"],a[href|="/rpl10"],a[href|="/rtwidur"],a[href|="/rtwidurr"],a[href|="/rpl20"],a[href|="/ramzingmagic"],a[href|="/ramazingmagic"],
 a[href|="/rpl01"],a[href|="/rkarmasalute"],a[href|="/rpl11"],a[href|="/rdishappy"],a[href|="/rpl21"],a[href|="/rkarmastare"],
 a[href|="/rpl02"],a[href|="/rohnoes"]
 {display:block; clear:none; float:left; width:70px; height:70px; background-image:url(%%lounge-emotes%%)!important}
 
-a[href|="/rpl00"],a[href|="/rfillyrarity"],a[href|="/rpl10"],a[href|="/rtwidur"],a[href|="/rpl20"],a[href|="/ramzingmagic"],
+a[href|="/rpl00"],a[href|="/rfillyrarity"],a[href|="/rpl10"],a[href|="/rtwidur"],a[href|="/rtwidurr"],a[href|="/rpl20"],a[href|="/ramzingmagic"],a[href|="/ramazingmagic"]
 a[href|="/rpl01"],a[href|="/rkarmasalute"],a[href|="/rpl11"],a[href|="/rdishappy"],a[href|="/rpl21"],a[href|="/rkarmastare"],
 a[href|="/rpl02"],a[href|="/rohnoes"]
 {-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1);}
@@ -528,10 +528,10 @@ a[href|="/ripferrbearand20andal"] {
 a[href|="/a00"],a[href|="/ajlie"],a[href|="/ra00"],a[href|="/rajlie"],a[href|="/b00"],a[href|="/flutterfear"],a[href|="/rb00"],a[href|="/rflutterfear"],a[href|="/c00"],a[href|="/rdsitting"],a[href|="/rc00"],a[href|="/rrdsitting"],a[href|="/e00"],a[href|="/fillytgap"],a[href|="/re00"],a[href|="/rfillytgap"],a[href|="/pl00"],a[href|="/fillyrarity"],a[href|="/rpl00"],a[href|="/f00"],a[href|="/pinkiesad"],a[href|="/rfillyrarity"],.side .md table tr:nth-of-type(1) td:nth-of-type(2):after
 {background-position: 0 0}
 
-a[href|="/a10"],a[href|="/priceless"],a[href|="/ra10"],a[href|="/rpriceless"],a[href|="/b10"],a[href|="/ppboring"],a[href|="/rb10"],a[href|="/rppboring"],a[href|="/c10"],a[href|="/rdhappy"],a[href|="/rc10"],a[href|="/rrdhappy"],a[href|="/e10"],a[href|="/rdhuh"],a[href|="/re10"],a[href|="/rrdhuh"],a[href|="/pl10"],a[href|="/twidur"],a[href|="/rpl10"],a[href|="/rtwidur"],a[href|="/f10"],a[href|="/starlightrage"],a[href|="/rf10"],a[href|="/rstarlightrage"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after
+a[href|="/a10"],a[href|="/priceless"],a[href|="/ra10"],a[href|="/rpriceless"],a[href|="/b10"],a[href|="/ppboring"],a[href|="/rb10"],a[href|="/rppboring"],a[href|="/c10"],a[href|="/rdhappy"],a[href|="/rc10"],a[href|="/rrdhappy"],a[href|="/e10"],a[href|="/rdhuh"],a[href|="/re10"],a[href|="/rrdhuh"],a[href|="/pl10"],a[href|="/twidur"],a[href|="/twidurr"],a[href|="/rpl10"],a[href|="/rtwidur"],a[href|="/rtwidurr"],a[href|="/f10"],a[href|="/starlightrage"],a[href|="/rf10"],a[href|="/rstarlightrage"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after
 {background-position: -100% 0}
 
-a[href|="/a20"],a[href|="/flutterjerk"],a[href|="/ra20"],a[href|="/rflutterjerk"],a[href|="/b20"],a[href|="/rarityyell"],a[href|="/rb20"],a[href|="/rrarityyell"],a[href|="/c20"],a[href|="/rdannoyed"],a[href|="/rc20"],a[href|="/rrdannoyed"],a[href|="/e20"],a[href|="/snails"],a[href|="/re20"],a[href|="/rsnails"],a[href|="/pl20"],a[href|="/amzingmagic"],a[href|="/rpl20"],a[href|="/ramzingmagic"],a[href|="/f20"],a[href|="/ajdoubt"],a[href|="/rf20"],a[href|="/rajdoubt"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after
+a[href|="/a20"],a[href|="/flutterjerk"],a[href|="/ra20"],a[href|="/rflutterjerk"],a[href|="/b20"],a[href|="/rarityyell"],a[href|="/rb20"],a[href|="/rrarityyell"],a[href|="/c20"],a[href|="/rdannoyed"],a[href|="/rc20"],a[href|="/rrdannoyed"],a[href|="/e20"],a[href|="/snails"],a[href|="/re20"],a[href|="/rsnails"],a[href|="/pl20"],a[href|="/amzingmagic"],a[href|="/amazingmagic"],a[href|="/rpl20"],a[href|="/ramzingmagic"],a[href|="/ramazingmagic"],a[href|="/f20"],a[href|="/ajdoubt"],a[href|="/rf20"],a[href|="/rajdoubt"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after
 {background-position: -200% 0}
 
 a[href|="/a30"],a[href|="/flutterroll"],a[href|="/ra30"],a[href|="/rflutterroll"],a[href|="/b30"],a[href|="/fluttershy"],a[href|="/rb30"],a[href|="/rfluttershy"],a[href|="/c30"],a[href|="/trixiesad"],a[href|="/rc30"],a[href|="/rtrixiesad"],a[href|="/e30"],a[href|="/twisad"],a[href|="/rpl30"],a[href|="/rtwisad"],a[href|="/f30"],a[href|="/flutterhay"],a[href|="/rf30"],a[href|="/rflutterhay"],.side .md table tr:nth-of-type(1) td:nth-of-type(5):after
@@ -1080,6 +1080,7 @@ padding: 0
 .flair-babs {background-position: -100% -2600%}
 .flair-hugger {background-position: -200% -2600%}
 .flair-moon {background-position: -300% -2600%}
+.flair-orangeslice {background-position: -400% -2600%}
 
 .flair-bergeron {background-position: 0 -2700%}
 .flair-maclove {background-position: -100% -2700%}
@@ -1101,7 +1102,7 @@ padding: 0
 .flair-cmcsyn {background-position: -300% -100%}
 .flair-cmcsyn:hover {background-position: -100% -2100%} /*For Synes7hesia; Sunset Shimmer Hover*/
 .flair-cmcdc {background-position: -300% -100%}
-.flair-cmcdc:hover {background-position: -300% -2100%} /*For DoomedCivilian; 'tia Hover*/
+.flair-cmcdc:hover {background-position: -100% -200%} /*For DoomedCivilian; 'tia Hover*/
 .flair-cmcpinkie {background-position: -300% -100%} /* /u/Pinkie_Pie */
 .flair-cmcpinkie:hover {background-position: 0% -100%}
 .flair-pathd {background-position: -100% 0%}
@@ -1207,6 +1208,22 @@ body a[href="/spoiler"]:hover{color:white!important}
 }
 
 div.over18 .entry .buttons .first{padding-left: 0px}
+
+/* The gate on the new expandos too */
+.expando-nsfw-gate-controls button.expando-nsfw-gate-show-once {
+    font-size: 0;
+    content: "";
+}
+
+.expando-nsfw-gate-controls button.expando-nsfw-gate-show-once::before {
+    font-size: 13.33333px;
+    content: "Click to see spoiler";
+}
+
+.expando-nsfw-gate-controls p.expando-nsfw-gate-text {
+    display: none;
+}
+
 
 /*Submit Link Styling*/
 .side {margin-top: 70px} 
