--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -1,7 +1,7 @@
 .id-t3_145m8r.link .title{font-size:large}
 
 
-
+.commentarea textarea:not(:focus) { background-image: url(%%watchingc%%); }
  
 /*SNOW BEGINS */
 /*
@@ -43,7 +43,7 @@ a { cursor: url(%%CursorHover%%), pointer; }
 /* Changes background  */
 
  body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%zootopia%%) fixed no-repeat 66% 100% !important;
+    background:  url(%%watching%%) fixed no-repeat 66% 100% !important;
 }go
 
 
@@ -58,7 +58,7 @@ a { cursor: url(%%CursorHover%%), pointer; }
 }
 
  #header #header-bottom-left {
-   background: url(%%esplin%%) 50% 0px !important;
+   background: url(%%watchingb%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
