--- a/source-css/arity.css
+++ b/source-css/arity.css
@@ -273,7 +273,7 @@ a[href|="/rar29"] {
 }
 
 /*downvote warning*/
-.arrow.up:hover:before {
+.arrow.down:hover:before {
      position: absolute;
      z-index: 1000;
      padding: 5px;
