--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -228,7 +228,7 @@ a[href|="/sp"] {
     height:0px
 }
 
-a[href="/sbisonfire"], a[href="/roastedmarshmallow"], a[href="/grenlitbobonfireagain"], a[href="/sweetieisonfire"], a[href="/sweetiebelleisonfire"], a[href="/bobdudeisonfire"], a[href="/bobdude0isonfire"], a[href="/sweetieonfire"]  {
+a[href="/sbisonfire"], a[href="/roastedmarshmallow"], a[href="/grenlitbobonfireagain"], a[href="/sweetieisonfire"], a[href="/sweetiebelleisonfire"], a[href="/bobdudeisonfire"], a[href="/bobdude0isonfire"], a[href="/sweetieonfire"] ,a[href="/sbfire"]  {
     background-position: 0px 0px;
     Display: block;
     Clear: none;
@@ -238,7 +238,7 @@ a[href="/sbisonfire"], a[href="/roastedmarshmallow"], a[href="/grenlitbobonfirea
     background-image: url(%%roastedmarshmallow%%) !important
 }
 
-a[href="/rdgrunkle"] {
+a[href="/rdgrunkle"],a[href="/joaje"]{
     background-position: 0px 0px;
     Display: block;
     Clear: none;
@@ -246,6 +246,46 @@ a[href="/rdgrunkle"] {
     Width: 70px;
     Height: 70px;
     background-image: url(%%rdgrunkle%%) !important
+}
+
+a[href="/ashpie"], a[href="/pinkieketchum"]{
+    background-position: 0px 0px;
+    Display: block;
+    Clear: none;
+    Float: left;
+    Width: 70px;
+    Height: 70px;
+    background-image: url(%%ashpie%%) !important
+}
+
+a[href="/flashyoak"], a[href="/garysentry"]{
+    background-position: 0px 0px;
+    Display: block;
+    Clear: none;
+    Float: left;
+    Width: 70px;
+    Height: 70px;
+    background-image: url(%%flashyoak%%) !important
+}
+
+a[href="/proftwi"]{
+    background-position: 0px 0px;
+    Display: block;
+    Clear: none;
+    Float: left;
+    Width: 70px;
+    Height: 70px;
+    background-image: url(%%proftwi%%) !important
+}
+
+a[href="/turnupfam"], a[href="/flutterfam"], a[href="/famshy"] {
+    background-position: 0px 0px;
+    Display: block;
+    Clear: none;
+    Float: left;
+    Width: 200px;
+    Height: 141px;
+    background-image: url(%%turnupfam%%) !important
 }
 
 /*Making the tabs' corners more rounded (stolen from r/mylittlepony)*/
