--- a/source-css/ponymotesextra2.css
+++ b/source-css/ponymotesextra2.css
@@ -61,3 +61,4 @@ a[href|="/fluffleshuffle"] {background:url(%%fluffleshuffle%%) no-repeat;width:1
 a[href|="/implightsparkle"], a[href|="/implylightsparkle"] {background:url(%%implightsparkle%%) no-repeat;width:92px;height:100px;display:block;float:left;}
 a[href|="/bownom"] {background:url(%%bownom%%) no-repeat;width:100px;height:90px;display:block;float:left;}
 a[href|="/sillywater"] {background:url(%%sillywater%%) no-repeat;width:150px;height:86px;display:block;float:left;}
+a[href|="/sonatapopcorn"] {background:url(%%sonatapopcorn%%) no-repeat;width:108px;height:150px;display:block;float:left;}
